// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/checkbox/demo/basic.md correctly 1`] = `
<label
  class="ezd-checkbox-wrapper"
>
  <span
    class="ezd-checkbox"
  >
    <input
      class="ezd-checkbox-input"
      type="checkbox"
    />
    <span
      class="ezd-checkbox-inner"
    />
  </span>
  <span>
    Checkbox
  </span>
</label>
`;

exports[`renders ./components/checkbox/demo/check-all.md correctly 1`] = `
Array [
  <label
    class="ezd-checkbox-wrapper"
  >
    <span
      class="ezd-checkbox ant-checkbox-indeterminate"
    >
      <input
        class="ezd-checkbox-input"
        type="checkbox"
      />
      <span
        class="ezd-checkbox-inner"
      />
    </span>
    <span>
      Check all
    </span>
  </label>,
  <div
    class="ezd-divider ant-divider-horizontal"
    role="separator"
  />,
  <div
    class="ezd-checkbox-group"
  >
    <label
      class="ezd-checkbox-wrapper ant-checkbox-wrapper-checked ant-checkbox-group-item"
    >
      <span
        class="ezd-checkbox ant-checkbox-checked"
      >
        <input
          checked=""
          class="ezd-checkbox-input"
          type="checkbox"
          value="Apple"
        />
        <span
          class="ezd-checkbox-inner"
        />
      </span>
      <span>
        Apple
      </span>
    </label>
    <label
      class="ezd-checkbox-wrapper ant-checkbox-group-item"
    >
      <span
        class="ezd-checkbox"
      >
        <input
          class="ezd-checkbox-input"
          type="checkbox"
          value="Pear"
        />
        <span
          class="ezd-checkbox-inner"
        />
      </span>
      <span>
        Pear
      </span>
    </label>
    <label
      class="ezd-checkbox-wrapper ant-checkbox-wrapper-checked ant-checkbox-group-item"
    >
      <span
        class="ezd-checkbox ant-checkbox-checked"
      >
        <input
          checked=""
          class="ezd-checkbox-input"
          type="checkbox"
          value="Orange"
        />
        <span
          class="ezd-checkbox-inner"
        />
      </span>
      <span>
        Orange
      </span>
    </label>
  </div>,
]
`;

exports[`renders ./components/checkbox/demo/controller.md correctly 1`] = `
Array [
  <p
    style="margin-bottom:20px"
  >
    <label
      class="ezd-checkbox-wrapper ant-checkbox-wrapper-checked"
    >
      <span
        class="ezd-checkbox ant-checkbox-checked"
      >
        <input
          checked=""
          class="ezd-checkbox-input"
          type="checkbox"
        />
        <span
          class="ezd-checkbox-inner"
        />
      </span>
      <span>
        Checked-Enabled
      </span>
    </label>
  </p>,
  <p>
    <button
      class="ezd-btn ant-btn-primary ant-btn-sm"
      type="button"
    >
      <span>
        Uncheck
      </span>
    </button>
    <button
      class="ezd-btn ant-btn-primary ant-btn-sm"
      style="margin:0 10px"
      type="button"
    >
      <span>
        Disable
      </span>
    </button>
  </p>,
]
`;

exports[`renders ./components/checkbox/demo/debug-line.md correctly 1`] = `
<div>
  <div
    class="ezd-space ant-space-horizontal ant-space-align-center"
    style="border:1px solid red;margin-bottom:16px"
  >
    <div
      class="ezd-space-item"
      style="margin-right:8px"
    >
      <label
        class="ezd-checkbox-wrapper"
      >
        <span
          class="ezd-checkbox"
        >
          <input
            class="ezd-checkbox-input"
            type="checkbox"
            value="light"
          />
          <span
            class="ezd-checkbox-inner"
          />
        </span>
      </label>
    </div>
    <div
      class="ezd-space-item"
      style="margin-right:8px"
    >
      <div>
        Bamboo
      </div>
    </div>
    <div
      class="ezd-space-item"
    >
      <label
        class="ezd-checkbox-wrapper"
      >
        <span
          class="ezd-checkbox"
        >
          <input
            class="ezd-checkbox-input"
            type="checkbox"
            value="little"
          />
          <span
            class="ezd-checkbox-inner"
          />
        </span>
        <span>
          Little
        </span>
      </label>
    </div>
  </div>
  <div
    class="ezd-space ant-space-horizontal ant-space-align-center"
    style="border:1px solid red;margin-bottom:16px"
  >
    <div
      class="ezd-space-item"
      style="margin-right:8px"
    >
      <label
        class="ezd-radio-wrapper"
      >
        <span
          class="ezd-radio"
        >
          <input
            class="ezd-radio-input"
            type="radio"
            value="light"
          />
          <span
            class="ezd-radio-inner"
          />
        </span>
      </label>
    </div>
    <div
      class="ezd-space-item"
      style="margin-right:8px"
    >
      <div>
        Bamboo
      </div>
    </div>
    <div
      class="ezd-space-item"
    >
      <label
        class="ezd-radio-wrapper"
      >
        <span
          class="ezd-radio"
        >
          <input
            class="ezd-radio-input"
            type="radio"
            value="little"
          />
          <span
            class="ezd-radio-inner"
          />
        </span>
        <span>
          Little
        </span>
      </label>
    </div>
  </div>
  <div
    style="border:1px solid red;margin-bottom:16px;display:flex;align-items:center"
  >
    <label
      class="ezd-checkbox-wrapper"
    >
      <span
        class="ezd-checkbox"
      >
        <input
          class="ezd-checkbox-input"
          type="checkbox"
          value="light"
        />
        <span
          class="ezd-checkbox-inner"
        />
      </span>
    </label>
    <div>
      Bamboo
    </div>
    <label
      class="ezd-checkbox-wrapper"
    >
      <span
        class="ezd-checkbox"
      >
        <input
          class="ezd-checkbox-input"
          type="checkbox"
          value="little"
        />
        <span
          class="ezd-checkbox-inner"
        />
      </span>
      <span>
        Little
      </span>
    </label>
  </div>
  <div
    style="border:1px solid red;margin-bottom:16px;display:flex;align-items:center"
  >
    <label
      class="ezd-radio-wrapper"
    >
      <span
        class="ezd-radio"
      >
        <input
          class="ezd-radio-input"
          type="radio"
          value="light"
        />
        <span
          class="ezd-radio-inner"
        />
      </span>
    </label>
    <div>
      Bamboo
    </div>
    <label
      class="ezd-radio-wrapper"
    >
      <span
        class="ezd-radio"
      >
        <input
          class="ezd-radio-input"
          type="radio"
          value="little"
        />
        <span
          class="ezd-radio-inner"
        />
      </span>
      <span>
        Little
      </span>
    </label>
  </div>
</div>
`;

exports[`renders ./components/checkbox/demo/disabled.md correctly 1`] = `
Array [
  <label
    class="ezd-checkbox-wrapper ant-checkbox-wrapper-disabled"
  >
    <span
      class="ezd-checkbox ant-checkbox-disabled"
    >
      <input
        class="ezd-checkbox-input"
        disabled=""
        type="checkbox"
      />
      <span
        class="ezd-checkbox-inner"
      />
    </span>
  </label>,
  <br />,
  <label
    class="ezd-checkbox-wrapper ant-checkbox-wrapper-disabled"
  >
    <span
      class="ezd-checkbox ant-checkbox-checked ant-checkbox-disabled"
    >
      <input
        checked=""
        class="ezd-checkbox-input"
        disabled=""
        type="checkbox"
      />
      <span
        class="ezd-checkbox-inner"
      />
    </span>
  </label>,
]
`;

exports[`renders ./components/checkbox/demo/group.md correctly 1`] = `
Array [
  <div
    class="ezd-checkbox-group"
  >
    <label
      class="ezd-checkbox-wrapper ant-checkbox-wrapper-checked ant-checkbox-group-item"
    >
      <span
        class="ezd-checkbox ant-checkbox-checked"
      >
        <input
          checked=""
          class="ezd-checkbox-input"
          type="checkbox"
          value="Apple"
        />
        <span
          class="ezd-checkbox-inner"
        />
      </span>
      <span>
        Apple
      </span>
    </label>
    <label
      class="ezd-checkbox-wrapper ant-checkbox-group-item"
    >
      <span
        class="ezd-checkbox"
      >
        <input
          class="ezd-checkbox-input"
          type="checkbox"
          value="Pear"
        />
        <span
          class="ezd-checkbox-inner"
        />
      </span>
      <span>
        Pear
      </span>
    </label>
    <label
      class="ezd-checkbox-wrapper ant-checkbox-group-item"
    >
      <span
        class="ezd-checkbox"
      >
        <input
          class="ezd-checkbox-input"
          type="checkbox"
          value="Orange"
        />
        <span
          class="ezd-checkbox-inner"
        />
      </span>
      <span>
        Orange
      </span>
    </label>
  </div>,
  <br />,
  <br />,
  <div
    class="ezd-checkbox-group"
  >
    <label
      class="ezd-checkbox-wrapper ant-checkbox-group-item"
    >
      <span
        class="ezd-checkbox"
      >
        <input
          class="ezd-checkbox-input"
          type="checkbox"
          value="Apple"
        />
        <span
          class="ezd-checkbox-inner"
        />
      </span>
      <span>
        Apple
      </span>
    </label>
    <label
      class="ezd-checkbox-wrapper ant-checkbox-wrapper-checked ant-checkbox-group-item"
    >
      <span
        class="ezd-checkbox ant-checkbox-checked"
      >
        <input
          checked=""
          class="ezd-checkbox-input"
          type="checkbox"
          value="Pear"
        />
        <span
          class="ezd-checkbox-inner"
        />
      </span>
      <span>
        Pear
      </span>
    </label>
    <label
      class="ezd-checkbox-wrapper ant-checkbox-group-item"
    >
      <span
        class="ezd-checkbox"
      >
        <input
          class="ezd-checkbox-input"
          type="checkbox"
          value="Orange"
        />
        <span
          class="ezd-checkbox-inner"
        />
      </span>
      <span>
        Orange
      </span>
    </label>
  </div>,
  <br />,
  <br />,
  <div
    class="ezd-checkbox-group"
  >
    <label
      class="ezd-checkbox-wrapper ant-checkbox-wrapper-checked ant-checkbox-wrapper-disabled ant-checkbox-group-item"
    >
      <span
        class="ezd-checkbox ant-checkbox-checked ant-checkbox-disabled"
      >
        <input
          checked=""
          class="ezd-checkbox-input"
          disabled=""
          type="checkbox"
          value="Apple"
        />
        <span
          class="ezd-checkbox-inner"
        />
      </span>
      <span>
        Apple
      </span>
    </label>
    <label
      class="ezd-checkbox-wrapper ant-checkbox-wrapper-disabled ant-checkbox-group-item"
    >
      <span
        class="ezd-checkbox ant-checkbox-disabled"
      >
        <input
          class="ezd-checkbox-input"
          disabled=""
          type="checkbox"
          value="Pear"
        />
        <span
          class="ezd-checkbox-inner"
        />
      </span>
      <span>
        Pear
      </span>
    </label>
    <label
      class="ezd-checkbox-wrapper ant-checkbox-wrapper-disabled ant-checkbox-group-item"
    >
      <span
        class="ezd-checkbox ant-checkbox-disabled"
      >
        <input
          class="ezd-checkbox-input"
          disabled=""
          type="checkbox"
          value="Orange"
        />
        <span
          class="ezd-checkbox-inner"
        />
      </span>
      <span>
        Orange
      </span>
    </label>
  </div>,
]
`;

exports[`renders ./components/checkbox/demo/layout.md correctly 1`] = `
<div
  class="ezd-checkbox-group"
  style="width:100%"
>
  <div
    class="ezd-row"
  >
    <div
      class="ezd-col ant-col-8"
    >
      <label
        class="ezd-checkbox-wrapper"
      >
        <span
          class="ezd-checkbox"
        >
          <input
            class="ezd-checkbox-input"
            type="checkbox"
            value="A"
          />
          <span
            class="ezd-checkbox-inner"
          />
        </span>
        <span>
          A
        </span>
      </label>
    </div>
    <div
      class="ezd-col ant-col-8"
    >
      <label
        class="ezd-checkbox-wrapper"
      >
        <span
          class="ezd-checkbox"
        >
          <input
            class="ezd-checkbox-input"
            type="checkbox"
            value="B"
          />
          <span
            class="ezd-checkbox-inner"
          />
        </span>
        <span>
          B
        </span>
      </label>
    </div>
    <div
      class="ezd-col ant-col-8"
    >
      <label
        class="ezd-checkbox-wrapper"
      >
        <span
          class="ezd-checkbox"
        >
          <input
            class="ezd-checkbox-input"
            type="checkbox"
            value="C"
          />
          <span
            class="ezd-checkbox-inner"
          />
        </span>
        <span>
          C
        </span>
      </label>
    </div>
    <div
      class="ezd-col ant-col-8"
    >
      <label
        class="ezd-checkbox-wrapper"
      >
        <span
          class="ezd-checkbox"
        >
          <input
            class="ezd-checkbox-input"
            type="checkbox"
            value="D"
          />
          <span
            class="ezd-checkbox-inner"
          />
        </span>
        <span>
          D
        </span>
      </label>
    </div>
    <div
      class="ezd-col ant-col-8"
    >
      <label
        class="ezd-checkbox-wrapper"
      >
        <span
          class="ezd-checkbox"
        >
          <input
            class="ezd-checkbox-input"
            type="checkbox"
            value="E"
          />
          <span
            class="ezd-checkbox-inner"
          />
        </span>
        <span>
          E
        </span>
      </label>
    </div>
  </div>
</div>
`;
